tests/ui-msrv/transmute-bound-dst-not-frombytes.stderr
error[E0433]: failed to resolve: could not find `transmute` in `zerocopy`
 --> tests/ui-msrv/transmute-bound-dst-not-frombytes.rs:9:57
  |
9 | const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = zerocopy::transmute!(AU16(0));
  |                                                         ^^^^^^^^^ could not find `transmute` in `zerocopy`
